# tremble

./: .gitignore  build_client.bat  build_server.bat  build_tests.bat  meson.build  meson_configuration.md  readme.md  tremble.sublime-workspace
data/: just_a_floor_AABBs  list_of_AABB  texture_test
data/shaders/grid/: grid.frag  grid.vert
data/shaders/text/: text.frag
data/shaders/tiled_vertex_xu/: tiled_vertex_xu.frag
data/shaders/vertex_barycentric_color_x/: vertex_color_x.vert
data/shaders/vertex_color_x/: vertex_color_x.frag  vertex_color_x.vert
data/shaders/vertex_xu/: vertex_xu.frag  vertex_xu.vert
inc/glad/: glad.h
src/: AABB.hpp  bsp.hpp  camera.hpp  commands.hpp  concepts.hpp  console.cpp  console.hpp  debug_draw.hpp  ecs.cpp  ecs.hpp  entity.hpp  font.hpp  gl_helpers.hpp  glad.cpp  globals.hpp  input.hpp  keys.hpp  main_client.cc  main_server.cc  memcpy_but_type.h  message.h  message.hpp  packet.hpp  plane.hpp  player_move.hpp  print.hpp  server.hpp  server_config.hpp  thread.hpp  to_byte_representation.h  to_byte_representation.hpp  udp_socket.h  udp_socket.hpp  unused  utility.hpp  vec.hpp  vertex.hpp
src/unused_/: client_thread.hpp  server.hpp  unused
tst/: AABB_test.cc  SDL_baseline_test.cc  SDL_test.cc  client_server.cc  command_test.cc  font_test.c  font_test.cc  reconstruct_packets.cc  server_test.cc
